Add holiday power rates

--- a/config.json
+++ b/config.json
@@ -69,9 +69,9 @@
         },
         "saturday": {
             "buy": {
-                "0000": 16.0,
-                "0800": 28.0,
-                "2200": 16.0
+                "0000": 16.3,
+                "0800": 28.52,
+                "2200": 16.3
             },
             "sell": {
                 "0000": 19.0
@@ -79,9 +79,19 @@
         },
         "sunday": {
             "buy": {
-                "0000": 16.0,
-                "0800": 28.0,
-                "2200": 16.0
+                "0000": 16.30,
+                "0800": 28.52,
+                "2200": 16.30
+            },
+            "sell": {
+                "0000": 19.0
+            }
+        },
+        "holiday": {
+            "buy": {
+                "0000": 16.30,
+                "0800": 28.52,
+                "2200": 16.30
             },
             "sell": {
                 "0000": 19.0
